# Github-Analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Document.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.commits/: interlaced_001.txt  interlaced_002.txt  interlaced_003.txt  interlaced_004.txt  interlaced_005.txt  interlaced_006.txt  interlaced_007.txt  interlaced_008.txt  interlaced_009.txt  interlaced_010.txt  interlaced_011.txt  interlaced_012.txt  interlaced_013.txt  interlaced_014.txt  interlaced_015.txt  interlaced_016.txt  interlaced_017.txt  interlaced_018.txt  interlaced_019.txt  interlaced_020.txt  interlaced_021.txt  interlaced_022.txt  interlaced_023.txt  interlaced_024.txt  interlaced_025.txt  interlaced_026.txt  interlaced_027.txt  interlaced_028.txt  interlaced_029.txt  interlaced_030.txt  interlaced_031.txt  interlaced_032.txt  interlaced_033.txt  interlaced_034.txt  interlaced_035.txt  interlaced_036.txt  interlaced_037.txt  interlaced_038.txt  interlaced_039.txt  interlaced_040.txt  (+30 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
clickhouse/: init.sql
docs/: command.md  compile_report.sh  dashboard_product_wireframe.md  massive_data_mining_report.aux  massive_data_mining_report.tex  massive_data_mining_report.toc  presentation.md
docs/architecture/: ai_service.md
frontend/: Dockerfile  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/chatbot/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/intelligence/: page.tsx
frontend/components/ai/: AIMarketBriefCard.tsx  AIRelatedReposCard.tsx  AIRepoBriefCard.tsx  AIRepoCompareCard.tsx  AISearchPanel.tsx  GitHubDataChatbot.tsx
frontend/components/dashboard/: ActivityTimeline.tsx  CategoryFilter.tsx  CategorySummaryGrid.tsx  LanguageDistChart.tsx  NewsRadarPanel.tsx  StarGrowthChart.tsx  TopReposTable.tsx  TopicHeatmap.tsx  TopicRotationBoard.tsx  TrendingRepos.tsx  WeekInReview.tsx
frontend/components/layout/: Footer.tsx  Header.tsx
frontend/hooks/: useAIMarketBrief.ts  useAIRelatedRepos.ts  useAIRepoBrief.ts  useAIRepoCompare.ts  useAISearch.ts  useDashboard.ts  useRepoTimeseries.ts
frontend/lib/: api.ts  types.ts  utils.ts
observability/: README.md  grafana_dashboard.json  loki.yml  prometheus.yml  promtail.yml  tempo.yml
observability/grafana_provisioning/dashboards/: clickhouse_db_overview.json  dashboard.yml  database_overview.json  demo_saas.json  gha_observability_demo.json  gha_observability_overview.json  github_ai_trend_analyzer.json  provider.yaml  system_overview.json
scheduler/: crontab_install.sh
scheduler/scripts/: 00_env.sh  01_nightly_batch_aggregation.sh  02_kafka_lag_check.sh  03_data_freshness_check.sh  04_parquet_cleanup.sh  05_clickhouse_optimize.sh  06_token_validation.sh  07_repo_metadata_refresh.sh  08_health_check.sh
scheduler/systemd/: gha-poller.service  gha-spark-streaming.service
scripts/: backdate_commits.py  backfill_clickhouse_from_parquet.py  enrich_repos_from_events.py
src/domain/: exceptions.py
src/infrastructure/: config.py
tests/: conftest.py
tests/ai/: test_ollama_adapter.py  test_process_ai_task.py
tests/application/: test_answer_github_data_question.py  test_build_market_brief.py  test_discover_repo_catalog.py  test_generate_repo_brief.py  test_generate_repo_compare.py  test_poll_github_events.py  test_process_event_stream.py  test_recommend_related_repositories.py  test_search_repositories.py  test_sync_repo_metadata.py
tests/domain/: test_category_classifier.py  test_event_type.py  test_exceptions.py  test_github_event.py  test_repo_category.py  test_repo_metadata.py  test_repository_id.py
tests/infrastructure/: test_clickhouse_ai_query_regressions.py  test_clickhouse_ai_service_parquet_fallback.py  test_clickhouse_backfill_service.py  test_clickhouse_dashboard_parquet_fallback.py  test_clickhouse_dashboard_query_regressions.py  test_clickhouse_dashboard_service.py  test_clickhouse_repo_metadata_repository.py  test_clickhouse_repo_observation_bootstrap.py  test_event_filter.py  test_github_client.py  test_kafka_producer.py  test_observability_config.py  test_parquet_repository.py  test_searxng_news_service.py  test_yescale_generation_service.py
tests/presentation/: test_ai_routes.py  test_dashboard_routes.py  test_observability_routes.py  test_pipeline_status.py
(+77 files in other folders)
