[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-ai-trend-analyzer"
version = "0.1.0"
description = "Real-time GitHub AI repository trend analyzer — Kafka + Spark + Parquet + ClickHouse"
requires-python = ">=3.11"
dependencies = [
    # HTTP
    "httpx[http2]>=0.27.0",
    "tenacity>=8.3.0",
    # Kafka
    "aiokafka>=0.11.0",
    "orjson>=3.10.0",
    # Spark (PySpark)
    "pyspark==3.5.1",
    # ClickHouse
    "clickhouse-driver>=0.2.9",
    # DuckDB
    "duckdb>=1.0.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Observability
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
    "opentelemetry-instrumentation-httpx>=0.55b1",
    "structlog>=24.2.0",
    # Async utilities
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pyarrow>=16.1.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-orjson>=3.6.2",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 99
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
    "ANN",       # flake8-annotations
    "RUF",       # ruff-specific
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "clickhouse_driver.*",
    "duckdb.*",
    "pyspark.*",
    "structlog.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
