[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-ai-analyzer"
version = "1.0.1"
description = "GitHub trend analysis backend with AI search and observability."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "clickhouse-driver>=0.2.9,<0.3.0",
  "fastapi>=0.115.0,<0.116.0",
  "httpx>=0.27.0,<0.28.0",
  "opentelemetry-exporter-otlp>=1.27.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0,<1.0.0",
  "opentelemetry-sdk>=1.27.0,<2.0.0",
  "prometheus-client>=0.20.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "pyarrow>=17.0.0,<18.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "structlog>=24.4.0,<25.0.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0,<2.0.0",
  "pre-commit>=3.8.0,<4.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
  "respx>=0.21.1,<0.22.0",
  "ruff>=0.6.0,<0.7.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ASYNC",
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = []
exclude = [
  "^frontend/",
  "^data/",
  "^tmpdata/",
]

[[tool.mypy.overrides]]
module = [
  "clickhouse_driver.*",
  "pyarrow",
  "pyarrow.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true

